# salsa-benchmarks

./: Cargo.toml
new-salsa/: Cargo.toml
new-salsa/benches/: compare.rs
new-salsa/src/: lib.rs
new-salsa/tests/: memory.rs
old-salsa/: Cargo.toml
old-salsa/benches/: compare.rs
old-salsa/src/: lib.rs
ra-salsa/: Cargo.toml
ra-salsa/benches/: compare.rs
rust-analyzer-salsa/: Cargo.toml
rust-analyzer-salsa/benches/: compare.rs
rust-analyzer-salsa/src/: lib.rs
rust-analyzer-salsa/tests/: memory.rs
