[package]
name = "new-salsa"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
criterion = "0.5.1"
dashmap = "6.0.1"
old_salsa = { package = "salsa", version = "0.16" }
salsa = { git = "https://github.com/salsa-rs/salsa.git", rev = "a1bf3a613f451af7fc0a59411c56abc47fe8e8e1" }

[[bench]]
name = "compare"
harness = false